<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activation_title" android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="24dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activation_instruction" android:textAlignment="center"
        android:layout_marginBottom="24dp"/>

    <EditText
        android:id="@+id/inputSignupOtp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/otp_hint_signup" android:inputType="number"
        android:maxLength="6"
        android:layout_marginBottom="24dp"/>

    <Button
        android:id="@+id/btnVerifySignup"
        android:layout_width="match_match"
        android:layout_height="wrap_content"
        android:text="@string/activate_account_button" />

</LinearLayout>